@@ -136,3 +136,7 @@
 * NxWM::CTaskbar:  After drawing the task bar, need to raise the
   application window otherwise the taskbar will be on the top and
   keyboard input will not be received by the top application.
+* NxWM::CTaskbar:  Bugfix... previous window should now be minimized
+  when a new window is started.  It should stay in a maximized state
+  so that it will re-appear with the window above it is closed or
+  minimized.
